--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,16 @@ name = "AxumPOC"
 version = "0.1.0"
 edition = "2021"
 
+[lib]
+path = "src/lib.rs"
+
+[[bin]]
+path = "src/main.rs"
+name = "AxumPOC"
+
 [dependencies]
 axum = "0.7.9"
+reqwest = "0.12.9"
 tokio = { version = "1.42.0", features = ["macros", "rt-multi-thread"] }
+hyper = "1.5.2"
+tower = "0.5.2"
