--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,7 @@ path = "src/main.rs"
 name = "AxumPOC"
 
 [dependencies]
-axum = "0.7.9"
+axum = "0.8.1"
 tokio = { version = "1.42.0", features = ["macros", "rt-multi-thread"] }
 tower = "0.5.2"
 serde = { version = "1.0.216", features = ["derive"] }
@@ -20,4 +20,9 @@ config = "0.15.4"
 uuid = { version = "1.11.0", features = ["v4", "serde"] }
 chrono = "0.4.39"
 deadpool-diesel = { version = "0.6.1", features = ["postgres"] }
-test-context = "0.3.0"
+tracing = { version = "0.1.41", features = [ "log" ]}
+tower-http = { version = "0.6.2", features = ["trace"] }
+tracing-subscriber = { version = "0.3.19" , features = ["registry", "env-filter"]}
+tracing-bunyan-formatter = "0.3.10"
+tracing-log = "0.2.0"
+anyhow = "1.0.95"
