--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,5 +24,8 @@ tracing = { version = "0.1.41", features = [ "log" ]}
 tower-http = { version = "0.6.2", features = ["trace"] }
 tracing-subscriber = { version = "0.3.19" , features = ["registry", "env-filter"]}
 tracing-bunyan-formatter = "0.3.10"
+axum-tracing-opentelemetry = "0.25.0"
 tracing-log = "0.2.0"
 anyhow = "1.0.95"
+secrecy = { version = "0.10.3", features = ["serde"]}
+tower-request-id = "0.3.0"
