--- a/entity/Cargo.toml
+++ b/entity/Cargo.toml
@@ -3,5 +3,9 @@ name = "entity"
 version = "0.1.0"
 edition = "2021"
 
+[lib]
+name = "entity"
+path = "src/lib.rs"
+
 [dependencies]
 sea-orm = { version = "1.1.0" }
