--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,24 +1,26 @@
 services:
   postgres:
     image: postgres
-    hostname: database
     ports:
-      - 5432:5432
+      - "5432:5432"
     volumes:
       - ~/apps/postgres:/var/lib/postgresql/data
     environment:
-      - POSTGRES_PASSWORD=KEPdBtU4iP3LzYZEU48EMq
-      - POSTGRES_USER=poc_user
-      - POSTGRES_DB=axum_poc
-    networks:
-      - postgres-db-network
+      POSTGRES_DB: axum_poc
+      POSTGRES_PASSWORD: KEPdBtU4iP3LzYZEU48EMq
+      POSTGRES_USER: poc_user
+    network_mode: host
+    healthcheck:
+      test: [ "CMD-SHELL", "pg_isready -U poc_user -d axum_poc" ]
+      interval: 10s
+      retries: 5
+      start_period: 30s
+      timeout: 10s
   backend:
     build: .
+    depends_on:
+      postgres:
+        condition: service_healthy
     ports:
       - "8080:8080"
-    networks:
-      - postgres-db-network
-
-networks:
-  postgres-db-network:
-    driver: host
+    network_mode: host
